# aba-sudoku

./: .gitignore  README.md  plan.md  pyproject.toml
backend/: __init__.py  main.py
backend/app/: main.py
backend/app/api/: puzzles.py  solvers.py
backend/app/benchmarks/: __init__.py  runner.py
backend/app/core/: __init__.py  board.py  puzzle_bank.py  solver_contract.py
backend/app/solvers/: prolog_solver.py
backend/solvers/: soduko.pl
backend/tests/: test_api.py  test_board.py  test_prolog_solver.py
scripts/: test_solvers.py
web-interface/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
web-interface/public/: index.html
web-interface/src/: App.css  Game.tsx
web-interface/src/api/: client.ts
web-interface/src/components/: Action.tsx  Difficulty.tsx  Numbers.tsx  Timer.tsx
web-interface/src/components/layout/: GameSection.tsx  Header.tsx  StatusSection.tsx
web-interface/src/context/: SudokuContext.tsx
web-interface/src/solver/: UniqueSudoku.tsx
